Agregando las galerias con Bootstrap

--- a/index.html
+++ b/index.html
@@ -52,7 +52,390 @@
 
         <!-- GALERIA DE PERSONAJES  -->
         <h2>HEROES</h2>
-        <section class="img">
+        <section id="galeria" class="container">
+            <div class="row ">
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="./media/aamon.jpg" alt="">
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/akai.jpg" alt="">
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/aldous.jpg" alt="">
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/alice.jpg" alt="">
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/alpha.jpg" alt="">
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/alucard.jpg" alt="">
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/angela.jpg" alt="">
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/argus.jpg" alt="">
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/arlott.jpg" alt="">
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/atlas.jpg" alt="">
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/aulus.jpg" alt="">
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/aurora.jpg" alt="">
+                </div>
+            </div>
+            <div class="row ">
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/badang.jpg" alt="">
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/balmond.jpg" alt="">
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/bane.jpg" alt="">
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/barats.jpg" alt="">
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/baxia.jpg" alt="">
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/beatrix.jpg" alt="">
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/belerick.jpg" alt="">
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/benedetta.jpg" alt="">
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/brody.jpg" alt="">
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/bruno.jpg" alt="">
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/carmilla.jpg" alt="">
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/cecilon.jpg" alt="">
+                </div>
+            </div>
+            <div class="row ">
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/change.jpg" alt="">
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/chou.jpg" alt="">
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/claude.jpg" alt="">
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/clint.jpg" alt="">
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/cyclops.jpg" alt="">
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/diggie.jpg" alt="">
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/dyrroth.jpg" alt="">
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/edith.jpg" alt="">
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/esmeralda.jpg" alt="">
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/estes.jpg" alt="">
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/eudora.jpg" alt="">
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/fanny.jpg" alt="">
+                </div>
+            </div>
+            <div class="row ">
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/faramis.jpg" alt="">
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/floryn.jpg" alt="">
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/franco.jpg" alt="">
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/fredrinn.jpg" alt="">
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/freya.jpg" alt="">
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/gatotkaca.jpg" alt="">
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/gloo.jpg" alt="">
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/gord.jpg" alt="">
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/granger.jpg" alt="">
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/grock.jpg" alt="">
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/guinevere.jpg" alt="">
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/gusion.jpg" alt="">
+                </div>
+            </div>
+            <div class="row ">
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/hanabi.jpg" alt="">
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/hanzo.jpg" alt="">
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/harith.jpg" alt="">
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/harley.jpg" alt="">
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/hayabusa.jpg" alt="">
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/helcurt.jpg" alt="">
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/hylos.jpg" alt="">
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/irithel.jpg" alt="">
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/jawhead.jpg" alt="">
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/johnson.jpg" alt="">
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/joy.jpg" alt="">
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/julian.jpg" alt="">
+                </div>
+            </div>
+            <div class="row ">
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/kadita.jpg" alt="">
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/kagura.jpg" alt="">
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/kaja.jpg" alt="">
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/karina.jpg" alt="">
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/khaleed.jpg" alt="">
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/khufra.jpg" alt="">
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/kimmy.jpg" alt="">
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/lancelot.jpg" alt="">
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/lapu-lapu.jpg" alt="">
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/layla.jpg" alt="">
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/leomord.jpg" alt="">
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/lesley.jpg" alt="">
+                </div>
+            </div>
+            <div class="row ">
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/ling.jpg" alt="">
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/lolita.jpg" alt="">
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/lunox.jpg" alt="">
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/luo-yi.jpg" alt="">
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/lylia.jpg" alt="">
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/martis.jpg" alt="">
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/masha.jpg" alt="">
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/mathilda.jpg" alt="">
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/melissa.jpg" alt="">
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/minotaur.jpg" alt="">
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/minsittar.jpg" alt="">
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/miya.jpeg" alt="">
+                </div>
+            </div>
+            <div class="row ">
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/moskov.jpg" alt="">
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/nana.jpg" alt="">
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/natalia.jpg" alt="">
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/natan.jpg" alt="">
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/novaria.jpg" alt="">
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/odette.jpg" alt="">
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/paquito.jpg" alt="">
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/pharsa.jpg" alt="">
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/phoveus.jpg" alt="">
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/popol-y-kupa.jpg" alt="">
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/rafaela.jpg" alt="">
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/roger.jpg" alt="">
+                </div>
+            </div>
+            <div class="row ">
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/ruby.jpg" alt="">
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/saber.jpg" alt="">
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/selena.jpg" alt="">
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/silvanna.jpg" alt="">
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/sun.jpg" alt="">
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/terizla.jpg" alt="">
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/thamuz.jpg" alt="">
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/tigreal.jpg" alt="">
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/uranus.jpg" alt="">
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/vale.jpg" alt="">
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/valentina.jpg" alt="">
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/valir.jpg" alt="">
+                </div>
+            </div>
+            <div class="row ">
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/vexana.jpg" alt="">
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/wan-wan.jpg" alt="">
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/xavier.jpg" alt="">
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/x-borg.jpg" alt="">
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/yin.jpg" alt="">
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/yi-sun-shin.jpg" alt="">
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/yu-zhong.jpg" alt="">
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/yve.jpg" alt="">
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/zhask.jpg" alt="">
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/zilong.jpg" alt="">
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/hilda.jpg" alt="">
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/karrie.jpg" alt="">
+                </div>
+            </div>
+    </div>
+        </section>
+        <!-- <section class="img">
             <img src="./media/aamon.jpg">
             <img src="./media/akai.jpg">
             <img src="./media/aldous.jpg">
@@ -174,7 +557,7 @@
             <img src="./media/hilda.jpg">
             <img src="./media/karrie.jpg">
 
-        </section>
+        </section> -->
     </main>
 
 
