--- a/pages/experience.html
+++ b/pages/experience.html
@@ -46,46 +46,123 @@
             </div>
 
         <hr>
-        <section>
-            <h2 class="galeria-scroll">HEROES</h2>
-            <img src="../media/freya.jpg">
-            <img src="../media/chou.jpg">
-            <img src="../media/arlott.jpg">
-            <img src="../media/joy.jpg">
-            <img src="../media/fredrinn.jpg">
-            <img src="../media/julian.jpg">
-            <img src="../media/phoveus.jpg">
-            <img src="../media/yu-zhong.jpg">
-            <img src="../media/silvanna.jpg">
-            <img src="../media/masha.jpg">
-            <img src="../media/x-borg.jpg">
-            <img src="../media/terizla.jpg">
-            <img src="../media/badang.jpg">
-            <img src="../media/minsittar.jpg">
-            <img src="../media/thamuz.jpg">
-            <img src="../media/aldous.jpg">
-            <img src="../media/jawhead.jpg">
-            <img src="../media/argus.jpg">
-            <img src="../media/lapu-lapu.jpg">
-            <img src="../media/ruby.jpg">
-            <img src="../media/sun.jpg">
-            <img src="../media/balmond.jpg">
-            <img src="../media/bane.jpg">
-            <img src="../media/zilong.jpg">
-            <img src="../media/alice.jpg">
-            <img src="../media/hilda.jpg">
-            <img src="../media/edith.jpg">
-            <img src="../media/khaleed.jpg">
-            <img src="../media/dyrroth.jpg">
-            <img src="../media/esmeralda.jpg">
-            <img src="../media/guinevere.jpg">
-            <img src="../media/martis.jpg">
-            <img src="../media/gatotkaca.jpg">
-            <img src="../media/alpha.jpg">
-            <img src="../media/joy.jpg"> /*revisar porque esta dos veces*/
-
-
-        </section>
+            <h2>HEROES</h2>
+            <section id="galeria" class="container">
+                <div class="row ">
+                    <div class="col-6 col-sm-4 col-md-3">
+                        <img src="../media/freya.jpg" alt="">
+                    </div>
+                    <div class="col-6 col-sm-4 col-md-3">
+                        <img src="../media/chou.jpg" alt="">
+                    </div>
+                    <div class="col-6 col-sm-4 col-md-3">
+                        <img src="../media/arlott.jpg" alt="">
+                    </div>
+                    <div class="col-6 col-sm-4 col-md-3">
+                        <img src="../media/joy.jpg" alt="">
+                    </div>
+                    <div class="col-6 col-sm-4 col-md-3">
+                        <img src="../media/fredrinn.jpg" alt="">
+                    </div>
+                    <div class="col-6 col-sm-4 col-md-3">
+                        <img src="../media/julian.jpg" alt="">
+                    </div>
+                    <div class="col-6 col-sm-4 col-md-3">
+                        <img src="../media/phoveus.jpg" alt="">
+                    </div>
+                    <div class="col-6 col-sm-4 col-md-3">
+                        <img src="../media/yu-zhong.jpg" alt="">
+                    </div>
+                    <div class="col-6 col-sm-4 col-md-3">
+                        <img src="../media/silvanna.jpg" alt="">
+                    </div>
+                    <div class="col-6 col-sm-4 col-md-3">
+                        <img src="../media/masha.jpg" alt="">
+                    </div>
+                    <div class="col-6 col-sm-4 col-md-3">
+                        <img src="../media/x-borg.jpg" alt="">
+                    </div>
+                    <div class="col-6 col-sm-4 col-md-3">
+                        <img src="../media/terizla.jpg" alt="">
+                    </div>
+                </div>
+                <div class="row ">
+                    <div class="col-6 col-sm-4 col-md-3">
+                        <img src="../media/badang.jpg" alt="">
+                    </div>
+                    <div class="col-6 col-sm-4 col-md-3">
+                        <img src="../media/minsittar.jpg" alt="">
+                    </div>
+                    <div class="col-6 col-sm-4 col-md-3">
+                        <img src="../media/thamuz.jpg" alt="">
+                    </div>
+                    <div class="col-6 col-sm-4 col-md-3">
+                        <img src="../media/aldous.jpg" alt="">
+                    </div>
+                    <div class="col-6 col-sm-4 col-md-3">
+                        <img src="../media/jawhead.jpg" alt="">
+                    </div>
+                    <div class="col-6 col-sm-4 col-md-3">
+                        <img src="../media/argus.jpg" alt="">
+                    </div>
+                    <div class="col-6 col-sm-4 col-md-3">
+                        <img src="../media/lapu-lapu.jpg" alt="">
+                    </div>
+                    <div class="col-6 col-sm-4 col-md-3">
+                        <img src="../media/ruby.jpg" alt="">
+                    </div>
+                    <div class="col-6 col-sm-4 col-md-3">
+                        <img src="../media/sun.jpg" alt="">
+                    </div>
+                    <div class="col-6 col-sm-4 col-md-3">
+                        <img src="../media/balmond.jpg" alt="">
+                    </div>
+                    <div class="col-6 col-sm-4 col-md-3">
+                        <img src="../media/bane.jpg" alt="">
+                    </div>
+                    <div class="col-6 col-sm-4 col-md-3">
+                        <img src="../media/zilong.jpg" alt="">
+                    </div>
+                </div>
+                <div class="row ">
+                    <div class="col-6 col-sm-4 col-md-3">
+                        <img src="../media/alice.jpg" alt="">
+                    </div>
+                    <div class="col-6 col-sm-4 col-md-3">
+                        <img src="../media/hilda.jpg" alt="">
+                    </div>
+                    <div class="col-6 col-sm-4 col-md-3">
+                        <img src="../media/edith.jpg" alt="">
+                    </div>
+                    <div class="col-6 col-sm-4 col-md-3">
+                        <img src="../media/khaleed.jpg" alt="">
+                    </div>
+                    <div class="col-6 col-sm-4 col-md-3">
+                        <img src="../media/dyrroth.jpg" alt="">
+                    </div>
+                    <div class="col-6 col-sm-4 col-md-3">
+                        <img src="../media/esmeralda.jpg" alt="">
+                    </div>
+                    <div class="col-6 col-sm-4 col-md-3">
+                        <img src="../media/guinevere.jpg" alt="">
+                    </div>
+                    <div class="col-6 col-sm-4 col-md-3">
+                        <img src="../media/martis.jpg" alt="">
+                    </div>
+                    <div class="col-6 col-sm-4 col-md-3">
+                        <img src="../media/gatotkaca.jpg" alt="">
+                    </div>
+                    <div class="col-6 col-sm-4 col-md-3">
+                        <img src="../media/alpha.jpg" alt="">
+                    </div>
+                    <div class="col-6 col-sm-4 col-md-3">
+                        <img src="../media/vexana.jpg" alt="">
+                    </div>
+                    <div class="col-6 col-sm-4 col-md-3">
+                        <img src="../media/belerick.jpg" alt="">
+                    </div>
+                </div>
+            </section>
     </main>
 
 
