--- a/pages/gold.html
+++ b/pages/gold.html
@@ -42,29 +42,75 @@
             <p class="texto-gold">En esta linea se recomienda usar <span class="gold">TIRADORES</span>. Estos hacen daño a distancia con una produccion de daño constante y alta. Su objetivo principal es infligir daño a los enemigos desde una distancia segura. Son esenciales para derribar torres y destruit al enemigo en cuestion de segundos cuando la partida este avanzada.</p> 
         </div>
         <hr>
-
-        <section>
-            <h2>HEROES</h2>
-            <img src="../media/beatrix.jpg" alt="no funca">
-            <img src="../media/brody.jpg" alt="no funca">
-            <img src="../media/popol-y-kupa.jpg" alt="no funca">
-            <img src="../media/wan-wan.jpg" alt="no funca">
-            <img src="../media/kimmy.jpg" alt="no funca">
-            <img src="../media/claude.jpg" alt="no funca">
-            <img src="../media/lesley.jpg" alt="no funca">
-            <img src="../media/moskov.jpg" alt="no funca">
-            <img src="../media/miya.jpeg" alt="no funca">
-            <img src="../media/layla.jpg" alt="no funca">
-            <img src="../media/clint.jpg" alt="no funca">
-            <img src="../media/bruno.jpg" alt="no funca">
-            <img src="../media/karrie.jpg" alt="no funca">
-            <img src="../media/melissa.jpg" alt="no funca">
-            <img src="../media/natan.jpg" alt="no funca">
-            <img src="../media/granger.jpg" alt="no funca">
-            <img src="../media/hanabi.jpg" alt="no funca">
-            <img src="../media/irithel.jpg" alt="no funca">
-            <img src="../media/yi-sun-shin.jpg" alt="no funca">
-
+        <h2>HEROES</h2>
+        <section id="galeria" class="container">
+            <div class="row ">
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/beatrix.jpg" alt="">
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/brody.jpg" alt="">
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/popol-y-kupa.jpg" alt="">
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/wan-wan.jpg" alt="">
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/kimmy.jpg" alt="">
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/claude.jpg" alt="">
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/lesley.jpg" alt="">
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/moskov.jpg" alt="">
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/miya.jpeg" alt="">
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/layla.jpg" alt="">
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/clint.jpg" alt="">
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/bruno.jpg" alt="">
+                </div>
+            </div>
+            <div class="row ">
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/karrie.jpg" alt="">
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/melissa.jpg" alt="">
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/natan.jpg" alt="">
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/granger.jpg" alt="">
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/hanabi.jpg" alt="">
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/irithel.jpg" alt="">
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/yi-sun-shin.jpg" alt="">
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/edith.jpg" alt="">
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/roger.jpg" alt="">
+                </div>
+            </div>
         </section>
     </main>
 
