--- a/pages/jungle.html
+++ b/pages/jungle.html
@@ -43,43 +43,123 @@
             <p class="texto-jungle">En la jungla se debe ser versatil y tener la capacidad de adaptarse a las necesidades del equipo, por lo que se recomienda ir con heroes capaces de eliminar rapidamente a todos los creeps de la jungla, que cuenten con una buena movilidad ya que necesitan moverse rapidamente entre las distintas areas de la jungla y poder llegar rapidamente a las distintas lineas para realizar las emboscadas o ganks.</p> 
         </div>
         <hr>
-
-        <section>
-            <h2>HEROES</h2>
-            <img src="../media/freya.jpg" alt="no funca">
-            <img src="../media/chou.jpg" alt="no funca">
-            <img src="../media/fanny.jpg" alt="no funca">
-            <img src="../media/arlott.jpg" alt="no funca">
-            <img src="../media/joy.jpg" alt="no funca">
-            <img src="../media/julian.jpg" alt="no funca">
-            <img src="../media/aulus.jpg" alt="no funca">
-            <img src="../media/paquito.jpg" alt="no funca">
-            <img src="../media/barats.jpg" alt="no funca">
-            <img src="../media/baxia.jpg" alt="no funca">
-            <img src="../media/ling.jpg" alt="no funca">
-            <img src="../media/kimmy.jpg" alt="no funca">
-            <img src="../media/hanzo.jpg" alt="no funca">
-            <img src="../media/leomord.jpg" alt="no funca">
-            <img src="../media/selena.jpg" alt="no funca">
-            <img src="../media/gusion.jpg" alt="no funca">
-            <img src="../media/lancelot.jpg" alt="no funca">
-            <img src="../media/harley.jpg" alt="no funca">
-            <img src="../media/natalia.jpg" alt="no funca">
-            <img src="../media/hayabusa.jpg" alt="no funca">
-            <img src="../media/karina.jpg" alt="no funca">
-            <img src="../media/balmond.jpg" alt="no funca">
-            <img src="../media/saber.jpg" alt="no funca">
-            <img src="../media/alucard.jpg" alt="no funca">
-            <img src="../media/zilong.jpg" alt="no funca">
-            <img src="../media/roger.jpg" alt="no funca">
-            <img src="../media/yin.jpg" alt="no funca">
-            <img src="../media/aamon.jpg" alt="no funca">
-            <img src="../media/benedetta.jpg" alt="no funca">
-            <img src="../media/dyrroth.jpg" alt="no funca">
-            <img src="../media/granger.jpg" alt="no funca">
-            <img src="../media/martis.jpg" alt="no funca">
-            <img src="../media/alpha.jpg" alt="no funca">
-
+        <h2>HEROES</h2>
+        <section id="galeria" class="container">
+            <div class="row ">
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/freya.jpg" alt="">
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/chou.jpg" alt="">
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/arlott.jpg" alt="">
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/fanny.jpg" alt="">
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/joy.jpg" alt="">
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/julian.jpg" alt="">
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/aulus.jpg" alt="">
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/paquito.jpg" alt="">
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/barats.jpg" alt="">
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/baxia.jpg" alt="">
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/ling.jpg" alt="">
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/kimmy.jpg" alt="">
+                </div>
+            </div>
+            <div class="row ">
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/hanzo.jpg" alt="">
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/leomord.jpg" alt="">
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/selena.jpg" alt="">
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/gusion.jpg" alt="">
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/lancelot.jpg" alt="">
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/harley.jpg" alt="">
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/natalia.jpg" alt="">
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/hayabusa.jpg" alt="">
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/karina.jpg" alt="">
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/balmond.jpg" alt="">
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/saber.jpg" alt="">
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/zilong.jpg" alt="">
+                </div>
+            </div>
+            <div class="row ">
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/alucard.jpg" alt="">
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/roger.jpg" alt="">
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/yin.jpg" alt="">
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/aamon.jpg" alt="">
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/benedetta.jpg" alt="">
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/dyrroth.jpg" alt="">
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/granger.jpg" alt="">
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/martis.jpg" alt="">
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/alpha.jpg" alt="">
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/cyclops.jpg" alt="">
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/esmeralda.jpg" alt="">
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/natan.jpg" alt="">
+                </div>
+            </div>
+    </div>
         </section>
     </main>
 
