--- a/pages/roam.html
+++ b/pages/roam.html
@@ -44,39 +44,122 @@
             <p class="texto-roam">Los heroes de apoyo son esenciales para mantener la solidez del equipo y proteger a los miembros mas debiles durante las peleas. Por otro lado, los Tanques son heroes de alta resistencia y capacidad para realizar daño. Su objetivo principal es proteger al equipo, iniciar peleas y controlar el campo de batalla. Suelen ir en la linea delantera y tienen habilidades de control de masa para inhabilitar a los enemigos.</p> 
         </div>
         <hr>
-
-        <section>
-            <h2 class="galeria-scroll">HEROES</h2>
-            <img src="../media/fanny.jpg">
-            <img src="../media/akai.jpg">
-            <img src="../media/franco.jpg">
-            <img src="../media/floryn.jpg">
-            <img src="../media/mathilda.jpg">
-            <img src="../media/barats.jpg">
-            <img src="../media/atlas.jpg">
-            <img src="../media/baxia.jpg">
-            <img src="../media/faramis.jpg">
-            <img src="../media/minsittar.jpg">.
-            <img src="../media/kaja.jpg">
-            <img src="../media/uranus.jpg">
-            <img src="../media/hylos.jpg">
-            <img src="../media/grock.jpg">
-            <img src="../media/ruby.jpg">
-            <img src="../media/lolita.jpg">
-            <img src="../media/nana.jpg">
-            <img src="../media/tigreal.jpg">
-            <img src="../media/rafaela.jpg">
-            <img src="../media/angela.jpg">
-            <img src="../media/diggie.jpg">
-            <img src="../media/estes.jpg">
-            <img src="../media/edith.jpg">
-            <img src="../media/gloo.jpg">
-            <img src="../media/carmilla.jpg">
-            <img src="../media/khufra.jpg">
-            <img src="../media/belerick.jpg">
-            <img src="../media/gatotkaca.jpg">
-            <img src="../media/johnson.jpg">
-
+        <h2>HEROES</h2>
+        <section id="galeria" class="container">
+            <div class="row ">
+            <div class="col-6 col-sm-4 col-md-3">
+                <img src="../media/fanny.jpg" alt="">
+            </div>
+            <div class="col-6 col-sm-4 col-md-3">
+                <img src="../media/akai.jpg" alt="">
+            </div>
+            <div class="col-6 col-sm-4 col-md-3">
+                <img src="../media/franco.jpg" alt="">
+            </div>
+            <div class="col-6 col-sm-4 col-md-3">
+                <img src="../media/floryn.jpg" alt="">
+            </div>
+            <div class="col-6 col-sm-4 col-md-3">
+                <img src="../media/faramis.jpg" alt="">
+            </div>
+            <div class="col-6 col-sm-4 col-md-3">
+                <img src="../media/mathilda.jpg" alt="">
+            </div>
+            <div class="col-6 col-sm-4 col-md-3">
+                <img src="../media/barats.jpg" alt="">
+            </div>
+            <div class="col-6 col-sm-4 col-md-3">
+                <img src="../media/atlas.jpg" alt="">
+            </div>
+            <div class="col-6 col-sm-4 col-md-3">
+                <img src="../media/baxia.jpg" alt="">
+            </div>
+            <div class="col-6 col-sm-4 col-md-3">
+                <img src="../media/minsittar.jpg" alt="">
+            </div>
+            <div class="col-6 col-sm-4 col-md-3">
+                <img src="../media/kaja.jpg" alt="">
+            </div>
+            <div class="col-6 col-sm-4 col-md-3">
+                <img src="../media/uranus.jpg" alt="">
+            </div>
+            </div>
+            <div class="row ">
+            <div class="col-6 col-sm-4 col-md-3">
+                <img src="../media/hylos.jpg" alt="">
+            </div>
+            <div class="col-6 col-sm-4 col-md-3">
+                <img src="../media/grock.jpg" alt="">
+            </div>
+            <div class="col-6 col-sm-4 col-md-3">
+                <img src="../media/ruby.jpg" alt="">
+            </div>
+            <div class="col-6 col-sm-4 col-md-3">
+                <img src="../media/lolita.jpg" alt="">
+            </div>
+            <div class="col-6 col-sm-4 col-md-3">
+                <img src="../media/nana.jpg" alt="">
+            </div>
+            <div class="col-6 col-sm-4 col-md-3">
+                <img src="../media/tigreal.jpg" alt="">
+            </div>
+            <div class="col-6 col-sm-4 col-md-3">
+                <img src="../media/rafaela.jpg" alt="">
+            </div>
+            <div class="col-6 col-sm-4 col-md-3">
+                <img src="../media/angela.jpg" alt="">
+            </div>
+            <div class="col-6 col-sm-4 col-md-3">
+                <img src="../media/diggie.jpg" alt="">
+            </div>
+            <div class="col-6 col-sm-4 col-md-3">
+                <img src="../media/estes.jpg" alt="">
+            </div>
+            <div class="col-6 col-sm-4 col-md-3">
+                <img src="../media/edith.jpg" alt="">
+            </div>
+            <div class="col-6 col-sm-4 col-md-3">
+                <img src="../media/gloo.jpg" alt="">
+            </div>
+            </div>
+            <div class="row ">
+            <div class="col-6 col-sm-4 col-md-3">
+                <img src="../media/carmilla.jpg" alt="">
+            </div>
+            <div class="col-6 col-sm-4 col-md-3">
+                <img src="../media/khufra.jpg" alt="">
+            </div>
+            <div class="col-6 col-sm-4 col-md-3">
+                <img src="../media/belerick.jpg" alt="">
+            </div>
+            <div class="col-6 col-sm-4 col-md-3">
+                <img src="../media/gatotkaca.jpg" alt="">
+            </div>
+            <div class="col-6 col-sm-4 col-md-3">
+                <img src="../media/johnson.jpg" alt="">
+            </div>
+            <div class="col-6 col-sm-4 col-md-3">
+                <img src="../media/novaria.jpg" alt="">
+            </div>
+            <div class="col-6 col-sm-4 col-md-3">
+                <img src="../media/esmeralda.jpg" alt="">
+            </div>
+            <div class="col-6 col-sm-4 col-md-3">
+                <img src="../media/balmond.jpg" alt="">
+            </div>
+            <div class="col-6 col-sm-4 col-md-3">
+                <img src="../media/hilda.jpg" alt="">
+            </div>
+            <div class="col-6 col-sm-4 col-md-3">
+                <img src="../media/jawhead.jpg" alt="">
+            </div>
+            <div class="col-6 col-sm-4 col-md-3">
+                <img src="../media/selena.jpg" alt="">
+            </div>
+            <div class="col-6 col-sm-4 col-md-3">
+                <img src="../media/leomord.jpg" alt="">
+            </div>
+            </div>
         </section>
     </main>
 
